src/objects/PSCommFooterLink__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSCommFooterTopic__c</fullName>
        <label>PSCommFooterTopic</label>
        <referenceTo>PSCommFooterTopic__c</referenceTo>
        <relationshipLabel>PSCommFooterLink</relationshipLabel>
        <relationshipName>PSCommFooterLink</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>PSCommFooterLink</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>PSCommFooterLink ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSCommFooterLink</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>